--- a/views/main.html
+++ b/views/main.html
@@ -1,1 +1,20 @@
 <div id="AlertPlaceholder"></div>
+    
+
+<h3>Időjárásadatok kezelése</h3>
+<hr>
+
+
+<p>
+    <button class="btn col-10 offset-1 muvGomb" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
+        aria-expanded="false" aria-controls="collapseWidthExample">
+        Műveletek
+    </button>
+</p>
+<div>
+    <div class="collapse col-8 offset-2" id="collapseWidthExample">
+        <div class="card card-body kartyaBG" style="width: 100%;">
+            This is some placeholder content for a horizontal collapse. Its hidden by default and shown when triggered.
+        </div>
+    </div>
+</div>
