weatherdata edit prototype

--- a/views/main.html
+++ b/views/main.html
@@ -1,4 +1,4 @@
-<div id="AlertPlaceholder"></div><h3>Időjárásadatok kezelése</h3>
+<h3>Időjárásadatok kezelése</h3>
 <hr>
 
 <div id="AlertPlaceholder"></div>
